!HOTFIX: ffmpeg bin file add and change filename

--- a/mmtracking/utils/test_code.ipynb
+++ b/mmtracking/utils/test_code.ipynb
@@ -82,6 +82,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../..'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.path.relpath(\"/opt/ml/final-project-level3-cv-04\",\"/opt/ml/final-project-level3-cv-04/mmtracking/utils\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
