--- a/mmtracking/utils/Postprocesser.ipynb
+++ b/mmtracking/utils/Postprocesser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +79,459 @@
     "# 원본에 영향을 미치기 때문에 위와같은 오류 문구를 출력함\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def delete_short_id(df:pd.DataFrame, fps:int, sec:int=5)-> pd.DataFrame:\n",
+    "    df = df.copy()\n",
+    "    for trk_id in df['track_id'].unique():\n",
+    "        # nan id pass\n",
+    "        if np.isnan(trk_id): \n",
+    "            continue\n",
+    "\n",
+    "        # if num of frames over fps*second keep track_id\n",
+    "        if len(df[df['track_id'] == trk_id]) > fps*sec:\n",
+    "            pass\n",
+    "        else:\n",
+    "            df.loc[df['track_id'] == trk_id,'track_id'] = np.NaN\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>frame</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>det_body_xmin</th>\n",
+       "      <th>det_body_ymin</th>\n",
+       "      <th>det_body_xmax</th>\n",
+       "      <th>det_body_ymax</th>\n",
+       "      <th>det_conf</th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>track_body_xmin</th>\n",
+       "      <th>track_body_ymin</th>\n",
+       "      <th>track_body_xmax</th>\n",
+       "      <th>track_body_ymax</th>\n",
+       "      <th>track_conf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>000001.jpg</td>\n",
+       "      <td>330.34960</td>\n",
+       "      <td>535.811160</td>\n",
+       "      <td>892.01580</td>\n",
+       "      <td>1715.1991</td>\n",
+       "      <td>0.940190</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>330.349609</td>\n",
+       "      <td>535.811157</td>\n",
+       "      <td>892.015808</td>\n",
+       "      <td>1715.199097</td>\n",
+       "      <td>0.940190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>000001.jpg</td>\n",
+       "      <td>2020.36360</td>\n",
+       "      <td>529.478300</td>\n",
+       "      <td>2466.63670</td>\n",
+       "      <td>1712.9662</td>\n",
+       "      <td>0.920153</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2020.363647</td>\n",
+       "      <td>529.478271</td>\n",
+       "      <td>2466.636719</td>\n",
+       "      <td>1712.966187</td>\n",
+       "      <td>0.920153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>000001.jpg</td>\n",
+       "      <td>1259.92330</td>\n",
+       "      <td>993.807100</td>\n",
+       "      <td>1535.52330</td>\n",
+       "      <td>1480.1564</td>\n",
+       "      <td>0.916883</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1259.923340</td>\n",
+       "      <td>993.807129</td>\n",
+       "      <td>1535.523315</td>\n",
+       "      <td>1480.156372</td>\n",
+       "      <td>0.916883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>000001.jpg</td>\n",
+       "      <td>1294.27110</td>\n",
+       "      <td>770.763550</td>\n",
+       "      <td>1545.58510</td>\n",
+       "      <td>1409.0521</td>\n",
+       "      <td>0.896960</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1294.271118</td>\n",
+       "      <td>770.763550</td>\n",
+       "      <td>1545.585083</td>\n",
+       "      <td>1409.052124</td>\n",
+       "      <td>0.896960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>000002.jpg</td>\n",
+       "      <td>334.89594</td>\n",
+       "      <td>538.945000</td>\n",
+       "      <td>892.85345</td>\n",
+       "      <td>1713.9077</td>\n",
+       "      <td>0.939980</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>334.895935</td>\n",
+       "      <td>538.945007</td>\n",
+       "      <td>892.853455</td>\n",
+       "      <td>1713.907715</td>\n",
+       "      <td>0.939980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3184</th>\n",
+       "      <td>3184</td>\n",
+       "      <td>720</td>\n",
+       "      <td>000720.jpg</td>\n",
+       "      <td>939.71180</td>\n",
+       "      <td>651.762000</td>\n",
+       "      <td>1209.87710</td>\n",
+       "      <td>1588.4817</td>\n",
+       "      <td>0.852101</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>939.711792</td>\n",
+       "      <td>651.762024</td>\n",
+       "      <td>1209.877075</td>\n",
+       "      <td>1588.481689</td>\n",
+       "      <td>0.852101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3185</th>\n",
+       "      <td>3185</td>\n",
+       "      <td>720</td>\n",
+       "      <td>000720.jpg</td>\n",
+       "      <td>1984.10840</td>\n",
+       "      <td>380.692020</td>\n",
+       "      <td>2448.39920</td>\n",
+       "      <td>2084.0657</td>\n",
+       "      <td>0.848854</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1984.108398</td>\n",
+       "      <td>380.692017</td>\n",
+       "      <td>2448.399170</td>\n",
+       "      <td>2084.065674</td>\n",
+       "      <td>0.848854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3186</th>\n",
+       "      <td>3186</td>\n",
+       "      <td>720</td>\n",
+       "      <td>000720.jpg</td>\n",
+       "      <td>605.68365</td>\n",
+       "      <td>532.536500</td>\n",
+       "      <td>1059.95850</td>\n",
+       "      <td>1798.4232</td>\n",
+       "      <td>0.845567</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>605.683655</td>\n",
+       "      <td>532.536499</td>\n",
+       "      <td>1059.958496</td>\n",
+       "      <td>1798.423218</td>\n",
+       "      <td>0.845567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3187</th>\n",
+       "      <td>3187</td>\n",
+       "      <td>720</td>\n",
+       "      <td>000720.jpg</td>\n",
+       "      <td>2207.57960</td>\n",
+       "      <td>592.927700</td>\n",
+       "      <td>2574.61960</td>\n",
+       "      <td>1706.9574</td>\n",
+       "      <td>0.801158</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2207.579590</td>\n",
+       "      <td>592.927673</td>\n",
+       "      <td>2574.619629</td>\n",
+       "      <td>1706.957397</td>\n",
+       "      <td>0.801158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3188</th>\n",
+       "      <td>3188</td>\n",
+       "      <td>720</td>\n",
+       "      <td>000720.jpg</td>\n",
+       "      <td>2847.67360</td>\n",
+       "      <td>77.711914</td>\n",
+       "      <td>2951.98020</td>\n",
+       "      <td>329.0136</td>\n",
+       "      <td>0.010188</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3189 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0  frame    filename  det_body_xmin  det_body_ymin  \\\n",
+       "0              0      1  000001.jpg      330.34960     535.811160   \n",
+       "1              1      1  000001.jpg     2020.36360     529.478300   \n",
+       "2              2      1  000001.jpg     1259.92330     993.807100   \n",
+       "3              3      1  000001.jpg     1294.27110     770.763550   \n",
+       "4              4      2  000002.jpg      334.89594     538.945000   \n",
+       "...          ...    ...         ...            ...            ...   \n",
+       "3184        3184    720  000720.jpg      939.71180     651.762000   \n",
+       "3185        3185    720  000720.jpg     1984.10840     380.692020   \n",
+       "3186        3186    720  000720.jpg      605.68365     532.536500   \n",
+       "3187        3187    720  000720.jpg     2207.57960     592.927700   \n",
+       "3188        3188    720  000720.jpg     2847.67360      77.711914   \n",
+       "\n",
+       "      det_body_xmax  det_body_ymax  det_conf  track_id  track_body_xmin  \\\n",
+       "0         892.01580      1715.1991  0.940190       0.0       330.349609   \n",
+       "1        2466.63670      1712.9662  0.920153       1.0      2020.363647   \n",
+       "2        1535.52330      1480.1564  0.916883       2.0      1259.923340   \n",
+       "3        1545.58510      1409.0521  0.896960       3.0      1294.271118   \n",
+       "4         892.85345      1713.9077  0.939980       0.0       334.895935   \n",
+       "...             ...            ...       ...       ...              ...   \n",
+       "3184     1209.87710      1588.4817  0.852101      12.0       939.711792   \n",
+       "3185     2448.39920      2084.0657  0.848854       4.0      1984.108398   \n",
+       "3186     1059.95850      1798.4232  0.845567       8.0       605.683655   \n",
+       "3187     2574.61960      1706.9574  0.801158       5.0      2207.579590   \n",
+       "3188     2951.98020       329.0136  0.010188       NaN              NaN   \n",
+       "\n",
+       "      track_body_ymin  track_body_xmax  track_body_ymax  track_conf  \n",
+       "0          535.811157       892.015808      1715.199097    0.940190  \n",
+       "1          529.478271      2466.636719      1712.966187    0.920153  \n",
+       "2          993.807129      1535.523315      1480.156372    0.916883  \n",
+       "3          770.763550      1545.585083      1409.052124    0.896960  \n",
+       "4          538.945007       892.853455      1713.907715    0.939980  \n",
+       "...               ...              ...              ...         ...  \n",
+       "3184       651.762024      1209.877075      1588.481689    0.852101  \n",
+       "3185       380.692017      2448.399170      2084.065674    0.848854  \n",
+       "3186       532.536499      1059.958496      1798.423218    0.845567  \n",
+       "3187       592.927673      2574.619629      1706.957397    0.801158  \n",
+       "3188              NaN              NaN              NaN         NaN  \n",
+       "\n",
+       "[3189 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>hello</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0  hello\n",
+       "0  1      1\n",
+       "1  2      1\n",
+       "2  3      1\n",
+       "3  4      1"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = pd.DataFrame([1,2,3,4])\n",
+    "temp[\"hello\"] = [1]*4\n",
+    "temp"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Index(['frame', 'filename', 'det_body_xmin', 'det_body_ymin', 'det_body_xmax',\n",
+    "       'det_body_ymax', 'det_conf', 'track_id', 'track_body_xmin',\n",
+    "       'track_body_ymin', 'track_body_xmax', 'track_body_ymax', 'track_conf'],\n",
+    "      dtype='object')\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_overlap(df:pd.DataFrame)->pd.DataFrame:\n",
+    "    overlap_list = []\n",
+    "    for frame_num in sorted(df['frame'].unique()): #iter each frame\n",
+    "        overlap_cnt = 0 # counting per id\n",
+    "        one_frame_df = df[df['frame'] == frame_num] # get one frame\n",
+    "\n",
+    "        # how to calculate each box relation... just for?\n",
+    "        [1,2],[3,4],[5,6],[7,8]\n",
+    "        for idx, row in one_frame_df.iterrows(): # loop in one frame\n",
+    "            x_min, y_min, x_max, y_max = row['track_body_xmin'], row['track_body_ymin'], row['track_body_xmax'], row['track_body_ymax']\n",
+    "            bbox1, bbox2, bbox3, bbox4, bbox5....\n",
+    "\n",
+    "\n",
+    "\n",
+    "            break\n",
+    "        break\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"/opt/ml/final-project-level3-cv-04/test_PATH/postprocessed_df1.csv\", index_col=0)\n",
+    "count_overlap(df)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
