Feat: add SmoothingVideoGenerator

--- a/video_generator/prototype_videogen.ipynb
+++ b/video_generator/prototype_videogen.ipynb
@@ -147,6 +147,7 @@
     "    else:\n",
     "        return True\n",
     "\n",
+    "\n",
     "#### smoothing\n",
     "def smoothing(df, target_column):\n",
     "    # split coordinates\n",
@@ -176,59 +177,33 @@
     "             'face_pred', \n",
     "             'key_point_order',\n",
     "             'center_point',\n",
-    "            #  'xmin',\n",
-    "            #  'ymin',\n",
-    "            #  'xmax',\n",
-    "            #  'ymax'\n",
     "            ], axis=1, inplace=True)\n",
     "    return df\n",
     "\n",
     "\n",
-    "\n",
-    "# top, bottom, left, right ; 경계의 각 방향에 대한 선의 폭\n",
-    "def img_padding(img, xmin, ymin, xmax, ymax, w, h):   # img 사이즈 범위 밖으로 벗어나면 그에맞게 padding\n",
-    "    # xmin, ymin, xmax, ymax\n",
+    "# top, bottom, left, right\n",
+    "def img_padding(img, xmin, ymin, xmax, ymax, w, h):\n",
     "    if xmax>w:\n",
-    "        img = cv2.copyMakeBorder(img, 0, 0, 0, xmax-w, cv2.BORDER_CONSTANT) # right xmax-w add pixel\n",
-    "    \n",
-    "    if xmin<0: # xmin is minus\n",
-    "        img = cv2.copyMakeBorder(img, 0, 0,-xmin, 0, cv2.BORDER_CONSTANT) # left -xmin add pixel\n",
-    "        xmax = xmax - xmin # 1024-(-125)\n",
+    "        img = cv2.copyMakeBorder(img, 0, 0, 0, xmax-w, cv2.BORDER_CONSTANT)\n",
+    "    if xmin<0: \n",
+    "        img = cv2.copyMakeBorder(img, 0, 0,-xmin, 0, cv2.BORDER_CONSTANT)\n",
+    "        xmax = xmax - xmin \n",
     "        xmin = 0\n",
-    "    \n",
     "    if ymax>h:\n",
-    "        img = cv2.copyMakeBorder(img, 0, ymax-h, 0, 0, cv2.BORDER_CONSTANT) # bottom ymax-h add pixel\n",
-    "    \n",
+    "        img = cv2.copyMakeBorder(img, 0, ymax-h, 0, 0, cv2.BORDER_CONSTANT)\n",
     "    if ymin<0:\n",
-    "        img = cv2.copyMakeBorder(img, -ymin, 0, 0, 0, cv2.BORDER_CONSTANT) # bottom ymax-h add pixel\n",
+    "        img = cv2.copyMakeBorder(img, -ymin, 0, 0, 0, cv2.BORDER_CONSTANT)\n",
     "        py = ymax - ymin\n",
     "        ymin = 0\n",
-    "    \n",
     "    return img, xmin, ymin, xmax, ymax\n",
     "\n",
-    "\n",
-    "def change_short_time_undetect_bbox(df, fps):\n",
-    "    values = np.array(df['is_track'].tolist())\n",
-    "    run_sum = np.cumsum(values)\n",
-    "    for n in set(run_sum):\n",
-    "        indices = np.where(run_sum == n)\n",
-    "        indices = indices[0].tolist()\n",
-    "        if len(indices) <= fps:\n",
-    "\n",
-    "            start_bbox_coord = df.iloc[indices[0]]['smoothed_bbox']\n",
-    "\n",
-    "            for idx in indices:\n",
-    "                df.at[idx,'smoothed_bbox'] = start_bbox_coord\n",
-    "    return df\n",
     "\n",
     "def moving_avg_untrackrow(df, keep_threshold):\n",
     "    df['increase_decrease_bbox'] = [None] * len(df)\n",
     "    df.at[0, 'increase_decrease_bbox'] = df.at[0, 'shift_bbox']\n",
-    "\n",
     "    cnt=0\n",
     "    last_state=None\n",
     "    df['is_track_update'] = [False]*len(df)\n",
-    "\n",
     "    for i in range(1, len(df)):\n",
     "        # if untrack case\n",
     "        if df.at[i, 'shift_bbox'] == [0,0,2880,2160] and df.at[i, 'is_track'] == False:\n",
@@ -249,20 +224,14 @@
     "            else:\n",
     "                # if the current row is the last row, take the value of the previous row\n",
     "                df.at[i, 'increase_decrease_bbox'] = df.at[i-1, 'shift_bbox']\n",
-    "            # df.at[i, 'is_track_update'] = True\n",
-    "        \n",
     "        # if tracked appeared\n",
     "        else:\n",
-    "            # if under_threshold replace last state\n",
-    "            # df.at[i, 'is_track_update'] = False\n",
-    "            \n",
     "            # update short track_state\n",
     "            if 0<cnt<keep_threshold:\n",
     "                for j in range(cnt):\n",
     "                    target_idx = i-(j+1)\n",
     "                    df.at[target_idx, 'increase_decrease_bbox'] = last_state\n",
     "                    df.at[target_idx, 'is_track_update'] = True # if short time state update\n",
-    "            \n",
     "            cnt=0\n",
     "            df.at[i, 'increase_decrease_bbox'] = df.at[i, 'shift_bbox']\n",
     "            last_state=df.at[i, 'shift_bbox']\n",
@@ -271,19 +240,14 @@
     "\n",
     "\n",
     "def crop_resize_save_img(df, img_dir_path, save_dir, name, meta_info, target_col, window_height, window_width, mode):\n",
-    "\n",
     "    mini_df = df[['filename', target_col, 'need_padding']]\n",
     "    cnt=0\n",
     "    width = meta_info['width']\n",
     "    height = meta_info['height']\n",
     "    padded_box = []\n",
-    "\n",
-    "    # mini_df['need_padding'] = mini_df['is_track'] | mini_df['is_track_update']\n",
-    "\n",
     "    # make dir\n",
     "    dir_path = osp.join(save_dir, name)\n",
     "    os.makedirs(dir_path, exist_ok=True)\n",
-    "\n",
     "    print(f\"start cropping {len(df)} images.\")\n",
     "    for order, (index, row) in tqdm(enumerate(mini_df.iterrows())):\n",
     "        # load\n",
@@ -314,6 +278,7 @@
     "    df['cropped_box'] = padded_box\n",
     "    return df, dir_path\n",
     "\n",
+    "\n",
     "def enlarge_with_padding(img, crop_width, crop_height, window_width, window_height, padding_tag):\n",
     "    if padding_tag == True:\n",
     "        padded_img = np.zeros((window_height, window_width, 3), dtype=np.uint8)\n",
@@ -322,10 +287,9 @@
     "        padded_img[y_offset:y_offset+crop_height, x_offset:x_offset+crop_width, :] = img\n",
     "    else:\n",
     "        padded_img = cv2.resize(img, (window_width, window_height), interpolation=cv2.INTER_CUBIC)\n",
-    "    # print(padding_tag, padded_img.shape)\n",
     "    return padded_img\n",
     "\n",
-    "# make_video(crop_img_path, df, meta_info, save_dir, window_height, window_width, member)\n",
+    "\n",
     "def make_video(dir_path, df, meta_info, save_dir, window_height, window_width, name):\n",
     "    files = os.listdir(dir_path)\n",
     "    padding_tags = df['need_padding'].to_list()\n",
@@ -360,22 +324,20 @@
     "        out.write(img)\n",
     "    out.release()\n",
     "    h,w,c = img.shape\n",
-    "    \n",
     "    return video_path\n",
     "\n",
     "\n",
     "\n",
     "def video_gen(df:pd.DataFrame, meta_info:dict, member:str, pred:dict,  save_dir:str,\n",
-    "             window_ratio:float, aespect_ratio:float, shift_bb:float):\n",
-    "\n",
+    "              window_ratio:float, aespect_ratio:float, shift_bb:float):\n",
     "    view_type = None\n",
-    "    \n",
     "    # calc window size\n",
     "    window_height = int(meta_info['height']*window_ratio)\n",
     "    window_width = int(meta_info['width']*window_ratio)\n",
-    "\n",
+    "    \n",
     "    print(f'window size: hegiht:{window_height}, width:{window_width}')\n",
     "\n",
+    "    # calc crop_size and assign mode\n",
     "    if aespect_ratio >= 1:\n",
     "        print('horizontal mode') # width fix\n",
     "        mode = 'horizontal'\n",
@@ -399,7 +361,7 @@
     "    df['key_point_order'] = df.apply(lambda x: get_order(x['name'], x['face_pred']), axis=1)\n",
     "\n",
     "    # 3. get center point(int type)\n",
-    "    df1['center_point'] = df1.apply(lambda x: get_keypoint(x['face_keypoint'], x['key_point_order']), axis=1)\n",
+    "    df['center_point'] = df.apply(lambda x: get_keypoint(x['face_keypoint'], x['key_point_order']), axis=1)\n",
     "\n",
     "    # 4. get center_bbox(bbox center is key_point)\n",
     "    df['center_bbox'] = df['center_point'].apply(lambda x: keypoint_center_bounding_box(x, crop_height, crop_width))\n",
